--- a/styles/faq.scss
+++ b/styles/faq.scss
@@ -1,3 +1,10 @@
+@import "global";
+@import "FunctionLibrary";
+@import "header-footer";
+@import "sidebar";
+@import "BreadCrumb";
+@import "content_body";
+
 .collapsible {
 	display:block;
 	overflow:hidden;
