--- a/styles/testimonials.scss
+++ b/styles/testimonials.scss
@@ -11,7 +11,6 @@
 		margin-bottom:30px;
 	 	border-bottom: $turquoise solid 2px;
 	 }
-
 }
 
 .feature-vid-title {
@@ -37,26 +36,87 @@
 }
 
 .testimonial-quote-block {
+	overflow:hidden;
 	padding-top:60px;
+	height:565px;
 }
 
 .quote-bubble {
-	position:relative;
-	z-index:1;
+	position:absolute;
+	padding: 0 10px;
+	z-index:-1;
 }
 
 .quote {
-	position:relative;
+	float:left;
 	z-index:2;
-	margin-top:-205px;
-	padding:16px;
+	margin-left:20px;
+	width:100%;
+	padding: 20px 20px 0 10px;
 	color:#fff;
 	font-size:138%;
 	line-height:155%;
 }
 
 .quote-credit {
-	padding: 30px 0 0 90px;
+	float:left;
+	padding-left:110px;
 	font-size:115%;
+	
+	&.one {
+		padding-top:60px;
+	}
+	&.two {
+		padding-top:50px;
+	}
+	&.three {
+		padding-top:60px;
+	}
 }
 
+@media screen and (min-width: 768px) and (max-width: 991px) {
+	.quote {
+		font-size:104%;
+	}
+	.testimonial-quote-block {
+		height:465px;
+	}
+	.quote-credit {
+		padding-left:90px;
+		font-size:90%;
+	
+		&.one {
+			padding-top:20px;
+		}
+		&.two {
+			padding-top:35px;
+		}
+		&.three {
+			padding-top:40px;
+		}
+	}
+}
+
+
+@media screen and (max-width: 767px) {
+	.quote {
+		font-size:104%;
+	}
+	.testimonial-quote-block {
+		height:465px;
+	}
+	.quote-credit {
+		padding-left:90px;
+		font-size:90%;
+	
+		&.one {
+			padding-top:20px;
+		}
+		&.two {
+			padding-top:35px;
+		}
+		&.three {
+			padding-top:40px;
+		}
+	}
+}
