--- a/styles/about_us.css
+++ b/styles/about_us.css
@@ -364,7 +364,7 @@ footer .navbar-nav {
   }
   .footer-links li:first-child {
     overflow: hidden;
-    width: 240px;
+    width: 100%;
     border: none;
     padding: 0;
   }
@@ -776,6 +776,427 @@ body {
     border-bottom-color: transparent;
   }
 }
+/*The first heading on any page*/
+.page-title {
+  font-family: Georgia, serif;
+  font-size: 265%;
+  margin-bottom: 10px;
+  margin-bottom: 0;
+}
+
+/*The text following the title*/
+.page-summary {
+  font-size: 120%;
+  font-style: italic;
+}
+
+/*The second heading on most pages*/
+.subheading {
+  font-size: 190%;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+.subheading.blue {
+  color: #173e6b;
+}
+.subheading.green {
+  color: #a9c038;
+}
+.subheading.turquoise {
+  color: #1c818f;
+}
+
+/*Paragraph Headings*/
+.p-heading {
+  font-size: 140%;
+  font-style: italic;
+  margin: 20px 0 5px 0;
+}
+.p-heading.red {
+  color: #dc4831;
+}
+.p-heading.turquoise {
+  color: #1c818f;
+}
+.p-heading.blue {
+  color: #173e6b;
+}
+.p-heading.green {
+  color: #a9c038;
+}
+
+.p-heading2 {
+  font-size: 100%;
+  text-transform: uppercase;
+  font-weight: bold;
+  margin-top: 25px;
+}
+.p-heading2.red {
+  color: #dc4831;
+}
+.p-heading2.turquoise {
+  color: #1c818f;
+}
+.p-heading2.blue {
+  color: #173e6b;
+}
+.p-heading2.green {
+  color: #a9c038;
+}
+
+.p-heading3 {
+  font-size: 100%;
+  text-transform: uppercase;
+  display: inline;
+  margin-bottom: 0px;
+}
+.p-heading3.red {
+  color: #dc4831;
+}
+.p-heading3.turquoise {
+  color: #1c818f;
+}
+.p-heading3.blue {
+  color: #173e6b;
+}
+.p-heading3.green {
+  color: #a9c038;
+}
+
+.p-heading4 {
+  font-style: italic;
+  font-size: 110%;
+}
+.p-heading4.blue {
+  /*local leaders*/
+  color: #173e6b;
+}
+
+/*The main text on the page*/
+.main-content {
+  padding-right: 40px;
+}
+
+@media screen and (max-width: 767px) {
+  .main-content {
+    padding-right: 15px;
+  }
+}
+#footnote {
+  font-size: 100%;
+  font-style: italic;
+  border-top: solid #555555 2px;
+  padding-top: 25px;
+  color: #959595;
+}
+
+.credit {
+  font-size: 100%;
+  padding-top: 25px;
+  text-transform: uppercase;
+  color: #666666;
+  margin-bottom: 40px;
+}
+
+/*The text next to a clickable icon*/
+.click-here {
+  font-style: italic;
+  font-size: 110%;
+  display: inline;
+  /*padding-left:10px;*/
+}
+.click-here.red {
+  color: #dc4831;
+}
+.click-here.red a {
+  text-decoration: underline;
+  color: #dc4831;
+}
+.click-here.turquoise {
+  color: #1c818f;
+}
+.click-here.turquoise a {
+  text-decoration: underline;
+  color: #1c818f;
+}
+.click-here.blue {
+  color: #173e6b;
+}
+.click-here.blue a {
+  text-decoration: underline;
+  color: #173e6b;
+}
+
+/*The location pin icon*/
+#location-icon {
+  display: inline;
+  position: relative;
+  z-index: 2;
+  margin-right: 10px;
+}
+
+#video-info-block {
+  padding: 20px 0 20px 0;
+}
+
+.caption-block {
+  padding: 20px 0 20px 0;
+  font-style: italic;
+  font-size: 120%;
+}
+.caption-block.red {
+  color: #dc4831;
+}
+.caption-block.green {
+  color: #a9c038;
+}
+
+.play-button {
+  display: inline;
+  float: left;
+  height: 36px;
+  width: 39px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
+
+.note {
+  font-style: italic;
+  font-size: 110%;
+  display: inline;
+  /*padding-left:10px;*/
+  /*margin-bottom: 20px;*/
+}
+.note.blue {
+  color: #173e6b;
+}
+.note.red {
+  color: #dc4831;
+}
+.note.turquoise {
+  color: #1c818f;
+}
+.note.green {
+  color: #a9c038;
+}
+
+.local-quote {
+  font-size: 140%;
+  font-style: italic;
+  color: #173e6b;
+  margin: 0 0 30px 0;
+  padding-left: 50px;
+  width: 65%;
+  float: left;
+  display: inline;
+  line-height: 160%;
+}
+
+.info-block {
+  font-style: italic;
+  color: #666666;
+  display: inline;
+}
+
+#faqbubble {
+  margin-top: 15px;
+}
+
+.img-space {
+  margin: 20px 0 40px 0;
+}
+
+#adm-img {
+  position: relative;
+  z-index: 1;
+  margin-top: -20px;
+}
+
+.indent {
+  margin: 0 60px 0 50px;
+}
+
+ol li {
+  margin-bottom: 25px;
+}
+
+ul li {
+  margin-bottom: 10px;
+}
+
+.highlight {
+  font-style: italic;
+}
+.highlight.green {
+  color: #a9c038;
+}
+.highlight.red {
+  color: #dc4831;
+}
+
+.previous {
+  margin-top: 50px;
+  font-style: italic;
+  font-weight: bold;
+  float: left;
+}
+.previous.blue {
+  color: #173e6b;
+}
+.previous.red {
+  color: #dc4831;
+}
+.previous.turquoise {
+  color: #1c818f;
+}
+.previous.green {
+  color: #a9c038;
+}
+
+.next {
+  margin-top: 50px;
+  font-style: italic;
+  font-weight: bold;
+  float: right;
+}
+.next.blue {
+  color: #173e6b;
+}
+.next.red {
+  color: #dc4831;
+}
+.next.turquoise {
+  color: #1c818f;
+}
+.next.green {
+  color: #a9c038;
+}
+
+/*hr.line{
+	&.turquoise{
+	    color:$turquoise;
+	    width:100%;
+	    height:3px;
+	}   
+}*/
+/*makes videos responsive*/
+.responsive-video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 30px;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  height: 0;
+  overflow: hidden;
+}
+.responsive-video-container.wip {
+  margin-top: 15px;
+}
+.responsive-video-container.sp {
+  margin-top: 15px;
+}
+
+.responsive-video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/**************************
+   PF-SECTION STYLE SHEET
+ **************************/
+@media (min-width: 480px) {
+  .hero {
+    padding-left: 64px;
+  }
+}
+.hero.no-icon {
+  padding-left: 0 !important;
+}
+.hero img {
+  left: 0 !important;
+  top: 6% !important;
+}
+
+.pf-section {
+  /*a {color:$red;}*/
+  /*	h3 {
+  		color: $red;
+  	}	*/
+  /*	h4 {
+  		color: $teal;
+  	}*/
+  /*	p ~ img {
+  		width: 70%;
+  		@media (max-width: 479px) {
+  			width: 100%;
+  		}
+  	}*/
+}
+@media (min-width: 480px) {
+  .pf-section {
+    padding-left: 64px;
+  }
+}
+.pf-section.no-icon {
+  padding-left: 0 !important;
+}
+.pf-section h5 {
+  color: #666666;
+}
+.pf-section p {
+  /*text-transform: none;*/
+}
+@media (max-width: 479px) {
+  .pf-section p {
+    font-size: 16px;
+  }
+}
+.pf-section .formula {
+  width: 75%;
+  text-align: center;
+  margin: 0 auto;
+  font-size: 1.5em;
+  background-color: #f3ab1f;
+  color: white;
+  padding: 10px;
+  -webkit-box-shadow: 7px 7px 10px rgba(50, 50, 50, 0.34);
+  -moz-box-shadow: 7px 7px 10px rgba(50, 50, 50, 0.34);
+  box-shadow: 7px 7px 10px rgba(50, 50, 50, 0.34);
+  /* .part1 {
+  	color:$turquoise;
+  }
+  .part2 {
+  	color:$navy_blue;
+  }
+  .part3 {
+  	color:$red;
+  } */
+}
+
+.pf-page-header {
+  display: table-cell;
+  vertical-align: middle;
+  position: relative;
+}
+.pf-page-header img {
+  margin-top: 10px;
+  position: absolute;
+  top: 15%;
+  left: -64px;
+  max-width: 51px;
+}
+@media (max-width: 479px) {
+  .pf-page-header img {
+    display: none;
+  }
+}
+.pf-page-header p {
+  text-transform: none;
+}
+
 /* Float Clearing
  ---------------------------------------------------------------------*/
 .module:after {
@@ -885,4 +1306,117 @@ body {
   background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
   width: 13px;
   height: 20px;
+}
+
+.underline {
+  padding-bottom: 15px;
+  margin-bottom: 30px;
+  border-bottom: #cb4830 solid 2px;
+}
+
+.feature-vid-title {
+  font-size: 150%;
+  font-weight: bold;
+  color: #1c818f;
+  text-transform: none;
+}
+
+.vid-title {
+  font-size: 130%;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #1c818f;
+}
+
+.container {
+  clear: both;
+}
+
+.video-list {
+  padding: 30px 0;
+}
+
+.testimonial-quote-block {
+  overflow: hidden;
+  padding-top: 60px;
+  height: 565px;
+}
+
+.quote-bubble {
+  position: absolute;
+  padding: 0 10px;
+  z-index: -1;
+}
+
+.quote {
+  float: left;
+  z-index: 2;
+  margin-left: 20px;
+  width: 100%;
+  padding: 20px 20px 0 10px;
+  color: #fff;
+  font-size: 138%;
+  line-height: 155%;
+}
+
+.quote-credit {
+  float: left;
+  padding-left: 110px;
+  font-size: 115%;
+}
+.quote-credit.one {
+  padding-top: 60px;
+}
+.quote-credit.two {
+  padding-top: 50px;
+}
+.quote-credit.three {
+  padding-top: 60px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .quote {
+    font-size: 104%;
+  }
+
+  .testimonial-quote-block {
+    height: 465px;
+  }
+
+  .quote-credit {
+    padding-left: 90px;
+    font-size: 90%;
+  }
+  .quote-credit.one {
+    padding-top: 20px;
+  }
+  .quote-credit.two {
+    padding-top: 35px;
+  }
+  .quote-credit.three {
+    padding-top: 40px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .quote {
+    font-size: 104%;
+  }
+
+  .testimonial-quote-block {
+    height: 465px;
+  }
+
+  .quote-credit {
+    padding-left: 90px;
+    font-size: 90%;
+  }
+  .quote-credit.one {
+    padding-top: 20px;
+  }
+  .quote-credit.two {
+    padding-top: 35px;
+  }
+  .quote-credit.three {
+    padding-top: 40px;
+  }
 }
