--- a/styles/about_us.scss
+++ b/styles/about_us.scss
@@ -12,111 +12,52 @@
 	 	border-bottom: $red solid 2px;
 	 }
 
-.feature-vid-title {
-	font-size:150%;
-	font-weight:bold;
-	color:$turquoise;
-	text-transform: none;
-}
-
-.vid-title {
-	font-size: 130%;
-	font-weight:bold;
+.credit-red{
+	font-size:100%;
+	padding-top:25px;
 	text-transform: uppercase;
-	color:$turquoise;
+	color:$red;
+	margin-bottom: 40px;
 }
 
-.container {
-	clear:both;
+.quote{
+	font-size:140%;
+	font-style: italic;
+	color:$red;
+	margin: 0 0 30px 0;
+	padding-left: 50px;
+	float:left;
+	line-height:160%;
 }
 
-.video-list {
-	padding:30px 0;
+.credit-red{
+	font-weight: bold;
+	font-size:100%;
+	text-transform: uppercase;
+	color:$red;
+
 }
 
-.testimonial-quote-block {
+.credit-red2{
+	font-style: italic;
+	color:$red;
+}
+
+.content-block {
 	overflow:hidden;
-	padding-top:60px;
-	height:565px;
-}
-
-.quote-bubble {
-	position:absolute;
-	padding: 0 10px;
-	z-index:-1;
-}
-
-.quote {
-	float:left;
-	z-index:2;
-	margin-left:20px;
-	width:100%;
-	padding: 20px 20px 0 10px;
-	color:#fff;
-	font-size:138%;
-	line-height:155%;
-}
-
-.quote-credit {
-	float:left;
-	padding-left:110px;
-	font-size:115%;
-	
-	&.one {
-		padding-top:60px;
-	}
-	&.two {
-		padding-top:50px;
-	}
-	&.three {
-		padding-top:60px;
+	div {
+		padding-left:0;
 	}
 }
 
-@media screen and (min-width: 768px) and (max-width: 991px) {
-	.quote {
-		font-size:104%;
-	}
-	.testimonial-quote-block {
-		height:465px;
-	}
-	.quote-credit {
-		padding-left:90px;
-		font-size:90%;
-	
-		&.one {
-			padding-top:20px;
-		}
-		&.two {
-			padding-top:35px;
-		}
-		&.three {
-			padding-top:40px;
-		}
+@media (max-width: 767px) {
+	.quote{
+		font-size:140%;
+		font-style: italic;
+		color:$red;
+		margin: 0 0 30px 0;
+		padding-left: 0;
+		float:left;
+		line-height:160%;
 	}
 }
-
-
-@media screen and (max-width: 767px) {
-	.quote {
-		font-size:104%;
-	}
-	.testimonial-quote-block {
-		height:465px;
-	}
-	.quote-credit {
-		padding-left:90px;
-		font-size:90%;
-	
-		&.one {
-			padding-top:20px;
-		}
-		&.two {
-			padding-top:35px;
-		}
-		&.three {
-			padding-top:40px;
-		}
-	}
-}
-
