--- a/styles/home.scss
+++ b/styles/home.scss
@@ -45,11 +45,11 @@ div.feature {
 	height:100px;
 	width:100%;
 	
-	span {
+	a {
 		display:table-cell;
 		vertical-align:middle;
 		text-transform:uppercase; 
-		padding:0 22px;
+		padding:0 10px 0 22px;
 		color:white;
 		font-size:1.1em;
 	}
@@ -58,8 +58,20 @@ div.feature {
 
 .byui-box-logo {
 	position:absolute;
-	right:5px;
+	right:15px;
 	bottom:0;
 	max-width:70px;
 	
+}
+
+.footer-box {
+	margin:0;
+	
+	li {
+		padding:0;
+		a {
+			color:$body-text;
+			padding:10px 10px;
+		}
+	}
 }
