--- a/styles/speaking_partners.css
+++ b/styles/speaking_partners.css
@@ -102,6 +102,7 @@ body {
   background-color: #b8801a;
   color: white;
   font-weight: bold;
+  letter-spacing: 1.1px;
 }
 
 @media (min-width: 768px) {
@@ -526,6 +527,9 @@ body {
   font-weight: normal;
   text-transform: capitalize;
 }
+#sidebar .nav .nav li:last-child {
+  margin-bottom: 5px;
+}
 #sidebar .nav .caret {
   border-top: 4px solid transparent;
   border-bottom: 4px solid transparent;
@@ -537,6 +541,9 @@ body {
   border-bottom: 4px solid transparent;
   border-right: 0px dotted;
   border-left: 6px solid #222222;
+}
+#sidebar .nav li {
+  margin-bottom: -9px;
 }
 #sidebar .nav li.active .nav {
   display: block;
