--- a/styles/speaking_partners.css
+++ b/styles/speaking_partners.css
@@ -23,6 +23,10 @@ body {
   color: #222222;
 }
 
+img {
+  -ms-interpolation-mode: bicubic;
+}
+
 /*** END GLOBAL ***/
 /*********************
    Header & Footer
@@ -51,7 +55,6 @@ body {
 .pathway-header {
   padding: 0px;
   background-color: #f3ab1f !important;
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.3);
   height: 139px;
   border: none;
   z-index: 5;
@@ -62,14 +65,32 @@ body {
   display: block;
   position: relative;
   left: 50%;
-  margin-left: -97px;
+  margin-left: -101px;
+  margin-top: 8px;
+  height: 46px;
   width: 160px;
+  background: url(../img/logo_retina.png);
+  background-repeat: no-repeat;
+  background-size: 150px auto;
+  background-position: center;
 }
 
 #pathway-logo {
-  padding: 12px 0;
+  background: url(../img/logo.png);
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  height: 135px;
+  width: 450px;
 }
 
+@media only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
+  #pathway-logo {
+    background: url(../img/logo_retina.png);
+    background-position: 15px center;
+    background-size: 280px auto;
+    background-repeat: no-repeat;
+  }
+}
 .header_contact {
   text-transform: none;
   color: #4d4d4d !important;
