--- a/styles/home.css
+++ b/styles/home.css
@@ -107,6 +107,10 @@ img {
   float: none !important;
 }
 
+.header-column {
+  margin-bottom: 0;
+}
+
 .faq-bubble {
   vertical-align: top;
 }
@@ -518,13 +522,13 @@ footer .navbar-nav {
   float: left;
 }
 
-.chevronOverlay {
-  display: none;
-  background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
-  width: 13px;
-  height: 20px;
-}
-
+/*.chevronOverlay
+{
+	display: none;
+	background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
+	width: 13px;
+	height: 20px;
+}*/
 .turquoise {
   color: #1c818f;
 }
