--- a/styles/local_leaders.css
+++ b/styles/local_leaders.css
@@ -107,6 +107,10 @@ img {
   float: none !important;
 }
 
+.header-column {
+  margin-bottom: 0;
+}
+
 .faq-bubble {
   vertical-align: top;
 }
@@ -958,13 +962,13 @@ body {
   float: left;
 }
 
-.chevronOverlay {
-  display: none;
-  background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
-  width: 13px;
-  height: 20px;
-}
-
+/*.chevronOverlay
+{
+	display: none;
+	background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
+	width: 13px;
+	height: 20px;
+}*/
 /*@import "_local_leaders_content";*/
 /*The first heading on any page*/
 .page-title {
@@ -1275,7 +1279,7 @@ ul li {
 .responsive-video-container {
   position: relative;
   padding-bottom: 56.25%;
-  padding-top: 30px;
+  padding-top: 35px;
   margin-top: 15px;
   margin-bottom: 20px;
   height: 0;
@@ -1296,6 +1300,13 @@ ul li {
   height: 100%;
 }
 
+/*$red: 	#cb4830;
+$teal: 	#1b8080;
+$gray: 	#666;
+
+$page_header_logo_width: 51px;
+$page_header_logo_offset: 13px;
+$page_header_logo_position: $page_header_logo_width + $page_header_logo_offset;*/
 /**************************
    PF-SECTION STYLE SHEET
  **************************/
@@ -1307,10 +1318,6 @@ ul li {
 .hero.no-icon {
   padding-left: 0 !important;
 }
-.hero img {
-  left: 0 !important;
-  top: 6% !important;
-}
 
 .pf-section {
   /*a {color:$red;}*/
@@ -1319,12 +1326,6 @@ ul li {
   	}	*/
   /*	h4 {
   		color: $teal;
-  	}*/
-  /*	p ~ img {
-  		width: 70%;
-  		@media (max-width: 479px) {
-  			width: 100%;
-  		}
   	}*/
 }
 @media (min-width: 480px) {
@@ -1336,7 +1337,7 @@ ul li {
   padding-left: 0 !important;
 }
 .pf-section h5 {
-  color: #666666;
+  color: #666;
 }
 .pf-section p {
   /*text-transform: none;*/
@@ -1374,11 +1375,9 @@ ul li {
   position: relative;
 }
 .pf-page-header img {
-  margin-top: 10px;
+  margin-top: 15px;
   position: absolute;
-  top: 15%;
-  left: -64px;
-  max-width: 51px;
+  margin-left: -64px;
 }
 @media (max-width: 479px) {
   .pf-page-header img {
@@ -1493,9 +1492,10 @@ ul li {
   float: left;
 }
 
-.chevronOverlay {
-  display: none;
-  background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
-  width: 13px;
-  height: 20px;
-}
+/*.chevronOverlay
+{
+	display: none;
+	background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
+	width: 13px;
+	height: 20px;
+}*/
