--- a/styles/media.css
+++ b/styles/media.css
@@ -107,6 +107,10 @@ img {
   float: none !important;
 }
 
+.header-column {
+  margin-bottom: 0;
+}
+
 .faq-bubble {
   vertical-align: top;
 }
@@ -958,13 +962,13 @@ body {
   float: left;
 }
 
-.chevronOverlay {
-  display: none;
-  background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
-  width: 13px;
-  height: 20px;
-}
-
+/*.chevronOverlay
+{
+	display: none;
+	background: url(../img/ChevronOverlay.png) no-repeat 100% 0;
+	width: 13px;
+	height: 20px;
+}*/
 /*The first heading on any page*/
 .page-title {
   font-family: Georgia, serif;
@@ -1274,7 +1278,7 @@ ul li {
 .responsive-video-container {
   position: relative;
   padding-bottom: 56.25%;
-  padding-top: 30px;
+  padding-top: 35px;
   margin-top: 15px;
   margin-bottom: 20px;
   height: 0;
@@ -1295,6 +1299,13 @@ ul li {
   height: 100%;
 }
 
+/*$red: 	#cb4830;
+$teal: 	#1b8080;
+$gray: 	#666;
+
+$page_header_logo_width: 51px;
+$page_header_logo_offset: 13px;
+$page_header_logo_position: $page_header_logo_width + $page_header_logo_offset;*/
 /**************************
    PF-SECTION STYLE SHEET
  **************************/
@@ -1306,10 +1317,6 @@ ul li {
 .hero.no-icon {
   padding-left: 0 !important;
 }
-.hero img {
-  left: 0 !important;
-  top: 6% !important;
-}
 
 .pf-section {
   /*a {color:$red;}*/
@@ -1318,12 +1325,6 @@ ul li {
   	}	*/
   /*	h4 {
   		color: $teal;
-  	}*/
-  /*	p ~ img {
-  		width: 70%;
-  		@media (max-width: 479px) {
-  			width: 100%;
-  		}
   	}*/
 }
 @media (min-width: 480px) {
@@ -1335,7 +1336,7 @@ ul li {
   padding-left: 0 !important;
 }
 .pf-section h5 {
-  color: #666666;
+  color: #666;
 }
 .pf-section p {
   /*text-transform: none;*/
@@ -1373,11 +1374,9 @@ ul li {
   position: relative;
 }
 .pf-page-header img {
-  margin-top: 10px;
+  margin-top: 15px;
   position: absolute;
-  top: 15%;
-  left: -64px;
-  max-width: 51px;
+  margin-left: -64px;
 }
 @media (max-width: 479px) {
   .pf-page-header img {
@@ -1397,12 +1396,12 @@ ul li {
   width: 100%;
   padding: 50px 0;
   margin-bottom: 0;
-  border-bottom: solid 1px #1b8080;
+  border-bottom: solid 1px #7fc7b6;
   vertical-align: middle;
 }
 .category-list a .caption {
   display: table-cell;
-  color: #1b8080;
+  color: #7fc7b6;
   font-size: 110%;
   letter-spacing: 1px;
   padding: 0 30px;
