--- a/styles/advising_and_support.css
+++ b/styles/advising_and_support.css
@@ -1428,3 +1428,18 @@ $page_header_logo_position: $page_header_logo_width + $page_header_logo_offset;*
   font-size: 115%;
   font-weight: 200;
 }
+
+.live_chat_icon img {
+  width: 200px;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .live_chat_icon img {
+    width: 180px;
+  }
+}
+@media (min-width: 992px) {
+  .live_chat_icon img {
+    width: 250px;
+  }
+}
