--- a/styles/media.css
+++ b/styles/media.css
@@ -1127,7 +1127,9 @@ body {
 .click-here {
   font-style: italic;
   font-size: 110%;
-  display: inline;
+  display: table-cell;
+  vertical-align: middle;
+  height: 70px;
   /*padding-left:10px;*/
 }
 .click-here.red {
@@ -1154,7 +1156,7 @@ body {
 
 /*The location pin icon*/
 #location-icon {
-  display: inline;
+  float: left;
   position: relative;
   z-index: 2;
   margin-right: 10px;
@@ -1231,7 +1233,7 @@ body {
 #adm-img {
   position: relative;
   z-index: 1;
-  margin-top: -20px;
+  /*margin-top:-20px;*/
 }
 
 .indent {
