--- a/styles/home.scss
+++ b/styles/home.scss
@@ -78,3 +78,40 @@ div.feature {
 		}
 	}
 }
+
+.full-width-banner {
+	&.teal {background-color: $teal;}
+	&.blue {background-color: $navy_blue;}
+	&.orange {background-color: $pathway_orange;}
+}
+/*Styles for full-width CTA Banners*/
+@media (max-width: 992px) and (min-width: 768px){
+	.full-width-banner img {
+		margin-left: -360px !important;
+	}
+} 
+@media (max-width: 767px) and (min-width: 494px){
+	.full-width-banner {
+		display: block;
+		overflow: hidden;
+		img {
+			margin:auto !important;
+			left:0 !important;
+		}
+	}
+} 
+@media (max-width: 493px){
+	.full-width-banner {
+		display: table-cell;
+		vertical-align: middle;
+		overflow: hidden;
+		height: 288px;
+		img {
+			width:100%;
+			margin: auto 0;
+			left:0 !important;
+			vertical-align: middle;
+		}
+	}
+}
+
