--- a/styles/_header-footer.scss
+++ b/styles/_header-footer.scss
@@ -245,6 +245,7 @@ footer {
 	width:78px;
 	height:46px;
 	float:right;
+	margin-top: 5px;
 	background:url(../img/byui_logo.png);
 }
 
@@ -272,7 +273,7 @@ only screen and (min-device-pixel-ratio: 2) {
 			display:inline;
 			
 			&.social-icon{
-				margin:5px;
+				margin:2px;
 				padding:0;
 			}
 			
@@ -285,6 +286,18 @@ only screen and (min-device-pixel-ratio: 2) {
 			border-right: solid 1px;
 			padding-left:0px;
 			padding-right:21px;
+			line-height: 34px;
+		}
+		&.footer-link {
+			margin-top: 10px;
+		}
+	}
+}
+@media (min-width: 768px) and (max-width: 991px) {
+	.footer-links .footer-link {
+		font-size: 92%;
+		a {
+			padding:0 13px;
 		}
 	}
 }
