--- a/styles/home.css
+++ b/styles/home.css
@@ -331,6 +331,7 @@ footer .navbar-nav {
   width: 78px;
   height: 46px;
   float: right;
+  margin-top: 5px;
   background: url(../img/byui_logo.png);
 }
 
@@ -349,7 +350,7 @@ footer .navbar-nav {
   display: inline;
 }
 .footer-links li a.social-icon {
-  margin: 5px;
+  margin: 2px;
   padding: 0;
 }
 .footer-links li a:hover {
@@ -360,8 +361,20 @@ footer .navbar-nav {
   border-right: solid 1px;
   padding-left: 0px;
   padding-right: 21px;
+  line-height: 34px;
+}
+.footer-links li.footer-link {
+  margin-top: 10px;
 }
 
+@media (min-width: 768px) and (max-width: 991px) {
+  .footer-links .footer-link {
+    font-size: 92%;
+  }
+  .footer-links .footer-link a {
+    padding: 0 13px;
+  }
+}
 /***** Mobile Footer *****/
 @media (max-width: 767px) {
   footer {
@@ -781,4 +794,45 @@ div.feature img {
 .footer-box li a {
   color: #222222;
   padding: 10px 10px;
+}
+
+.full-width-banner.teal {
+  background-color: #7fc7b6;
+}
+.full-width-banner.blue {
+  background-color: #173e6b;
+}
+.full-width-banner.orange {
+  background-color: #f3ab1f;
+}
+
+/*Styles for full-width CTA Banners*/
+@media (max-width: 992px) and (min-width: 768px) {
+  .full-width-banner img {
+    margin-left: -360px !important;
+  }
+}
+@media (max-width: 767px) and (min-width: 494px) {
+  .full-width-banner {
+    display: block;
+    overflow: hidden;
+  }
+  .full-width-banner img {
+    margin: auto !important;
+    left: 0 !important;
+  }
+}
+@media (max-width: 493px) {
+  .full-width-banner {
+    display: table-cell;
+    vertical-align: middle;
+    overflow: hidden;
+    height: 288px;
+  }
+  .full-width-banner img {
+    width: 100%;
+    margin: auto 0;
+    left: 0 !important;
+    vertical-align: middle;
+  }
 }
