--- a/styles/_colorScheme.scss
+++ b/styles/_colorScheme.scss
@@ -6,6 +6,7 @@ $turquoise:#1c818f;
 $red:#dc4831;
 $teal:#7fc7b6;
 $green:#a9c038;
+$darkgreen: #6C7D2A;
 $navy_blue:#173e6b;
 $pathway-orange: #f3ab1f;
 $nav_hover_color: #fff !important;
@@ -20,12 +21,13 @@ $nav3_color: $teal;
 $nav4_color: $green;
 $nav5_color: $navy_blue;
 $nav6_color: $body-text;
+$nav7_color: $darkgreen;
 
 // Build Navigation Color List:
-$nav_color_list: $nav1_color, $nav2_color, $nav3_color, $nav4_color, $nav5_color, $nav6_color;
-$nav_color_labels: "turquoise", "red", "teal", "green", "navy_blue", "black" ;
+$nav_color_list: $nav1_color, $nav2_color, $nav3_color, $nav4_color, $nav5_color, $nav6_color, $nav7_color;
+$nav_color_labels: "turquoise", "red", "teal", "green", "navy_blue", "black", "darkgreen" ;
 
-@for $i from 1 through 5 {
+@for $i from 1 through 7 {
 	.#{nth($nav_color_labels, $i)}{
 		color: nth($nav_color_list, $i);
 	}
