--- a/styles/faq.css
+++ b/styles/faq.css
@@ -19,6 +19,14 @@
   color: #173e6b;
 }
 
+.black {
+  color: #222222;
+}
+
+.darkgreen {
+  color: #6c7d2a;
+}
+
 body {
   color: #222222;
 }
@@ -49,6 +57,14 @@ img {
 
 .navy_blue {
   color: #173e6b;
+}
+
+.black {
+  color: #222222;
+}
+
+.darkgreen {
+  color: #6c7d2a;
 }
 
 /****** Header ******/
@@ -486,6 +502,14 @@ footer .navbar-nav {
   color: #173e6b;
 }
 
+.black {
+  color: #222222;
+}
+
+.darkgreen {
+  color: #6c7d2a;
+}
+
 html, body {
   height: 100%;
 }
@@ -812,6 +836,36 @@ body {
 }
 #sidebar .nav.black li.active a:hover .caret.down {
   border-top: 6px solid #222222;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 0px dotted;
+}
+#sidebar .nav.darkgreen li.active {
+  color: #6c7d2a;
+}
+#sidebar .nav.darkgreen li.active a, #sidebar .nav.darkgreen li.active a:hover, #sidebar .nav.darkgreen li.active a:visited {
+  color: #6c7d2a;
+}
+#sidebar .nav.darkgreen li.active .caret {
+  border-top: 6px solid #6c7d2a;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 0px dotted;
+}
+#sidebar .nav.darkgreen li.active .caret.down {
+  border-top: 6px solid #6c7d2a;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 0px dotted;
+}
+#sidebar .nav.darkgreen li.active a:hover .caret {
+  border-top: 6px solid #6c7d2a;
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-bottom: 0px dotted;
+}
+#sidebar .nav.darkgreen li.active a:hover .caret.down {
+  border-top: 6px solid #6c7d2a;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
   border-bottom: 0px dotted;
